refactor: move all security layers to core processor, add interceptor, handle internal call...