@@ -12,6 +12,8 @@ import org.apache.hc.core5.http.io.entity.EntityUtils;
 import org.apache.hc.core5.http.io.entity.StringEntity;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.core.io.ClassPathResource;
+import org.springframework.http.HttpHeaders;
+import org.springframework.http.MediaType;
 import org.springframework.stereotype.Service;
 import org.springframework.web.reactive.function.client.WebClient;
 import reactor.core.publisher.Mono;
@@ -20,26 +22,23 @@ import vn.edu.tdtu.dto.response.FcmResponse;
 import vn.edu.tdtu.enums.ERIDHandleType;
 import vn.edu.tdtu.model.User;
 import vn.edu.tdtu.service.interfaces.FirebaseService;
+import vn.tdtu.common.utils.Constants;
 
 import java.io.IOException;
-import java.util.Arrays;
 import java.util.List;
 
 @Service
 @RequiredArgsConstructor
 @Slf4j
 public class FirebaseServiceImpl implements FirebaseService {
-    @Value("${fcm.sender.id}")
-    private String projectId;
     private final WebClient webClient;
-    private final static String SCOPES = "https://www.googleapis.com/auth/firebase.messaging";
 
     @Override
     public String getAccessToken() {
         try {
             GoogleCredentials googleCredentials = GoogleCredentials
                     .fromStream(new ClassPathResource("service-account.json").getInputStream())
-                    .createScoped(Arrays.asList(SCOPES));
+                    .createScoped(List.of(Constants.Firebase.SCOPES));
 
             googleCredentials.refreshIfExpired();
             return googleCredentials.getAccessToken().getTokenValue();
@@ -80,12 +79,12 @@ public class FirebaseServiceImpl implements FirebaseService {
         return webClient.get()
                 .uri(uriBuilder -> uriBuilder
                         .path("/fcm/notification")
-                        .queryParam("notification_key_name", notificationKeyName)
+                        .queryParam(Constants.Firebase.QUERY_PARAM_NOTIFICATION_KEY_NAME, notificationKeyName)
                         .build())
-                .header("Authorization", "Bearer " + getAccessToken())
-                .header("Content-Type", "application/json")
-                .header("access_token_auth", "true")
-                .header("project_id", projectId)
+                .header(HttpHeaders.AUTHORIZATION, Constants.BEARER_PREFIX + getAccessToken())
+                .header(HttpHeaders.CONTENT_TYPE, MediaType.APPLICATION_JSON_VALUE)
+                .header(Constants.Firebase.ACCESS_TOKEN_AUTH_HEADER, "true")
+                .header(Constants.Firebase.PROJECT_ID_HEADER, Constants.Firebase.PROJECT_SENDER_ID)
                 .retrieve()
                 .onStatus(httpStatusCode -> httpStatusCode.value() == 400, clientResponse -> Mono.empty())
                 .bodyToMono(FcmResponse.class)
@@ -93,29 +92,29 @@ public class FirebaseServiceImpl implements FirebaseService {
     }
 
     private String handleRegistrationIds(ERIDHandleType type, String notiKeyName, List<String> regisIds) {
-        String notificationKey = getNotificationKey(notiKeyName).getNotification_key();
-
-        String notificationUrl = "https://fcm.googleapis.com/fcm/notification";
+        String notificationKey = getNotificationKey(notiKeyName).getNotificationKey();
         String serverKey = getAccessToken();
 
         FCMRegistrationIdsBody requestBody = new FCMRegistrationIdsBody();
-        requestBody.setRegistration_ids(regisIds);
-        requestBody.setNotification_key_name(notiKeyName);
+        requestBody.setRegistrationIds(regisIds);
+        requestBody.setNotificationKeyName(notiKeyName);
         requestBody.setOperation(type.getName());
 
         if (type == ERIDHandleType.TYPE_ADD || type == ERIDHandleType.TYPE_REMOVE) {
-            log.info("Notification key: " + notificationKey);
-            requestBody.setNotification_key(notificationKey);
+            log.info("[handleRegistrationIds] Notification key: " + notificationKey);
+            requestBody.setNotificationKey(notificationKey);
         }
 
         try (CloseableHttpClient httpClient = HttpClients.createDefault()) {
-            log.info("Project id: " + projectId);
+            log.info("Project id: " + Constants.Firebase.PROJECT_SENDER_ID);
             log.info("Access token: " + serverKey);
-            HttpPost httpPost = new HttpPost(notificationUrl);
-            httpPost.setHeader("Authorization", "Bearer " + serverKey);
-            httpPost.setHeader("Content-Type", "application/json");
-            httpPost.setHeader("project_id", projectId);
-            httpPost.setHeader("access_token_auth", true);
+
+            HttpPost httpPost = new HttpPost(Constants.Firebase.NOTIFICATION_URl);
+
+            httpPost.setHeader(HttpHeaders.AUTHORIZATION, Constants.BEARER_PREFIX + serverKey);
+            httpPost.setHeader(HttpHeaders.CONTENT_TYPE, MediaType.APPLICATION_JSON_VALUE);
+            httpPost.setHeader(Constants.Firebase.PROJECT_ID_HEADER, Constants.Firebase.PROJECT_SENDER_ID);
+            httpPost.setHeader(Constants.Firebase.ACCESS_TOKEN_AUTH_HEADER, true);
 
             ObjectMapper objectMapper = new ObjectMapper();
             String jsonBody = objectMapper.writeValueAsString(requestBody);
@@ -128,12 +127,13 @@ public class FirebaseServiceImpl implements FirebaseService {
             JsonNode root = objectMapper.readTree(responseBody);
             log.info("Response body: " + responseBody);
 
-            if (root.path("notification_key").asText().isEmpty()) {
-                log.error("Failed to send notification request: " + root.path("error").asText());
+            if (root.path(Constants.Firebase.RESPONSE_BODY_NOTIFICATION_KEY).asText().isEmpty()) {
+                log.error("Failed to send notification request: {}",
+                        root.path(Constants.Firebase.RESPONSE_BODY_ERROR).asText());
                 return "";
             }
 
-            return getNotificationKey(notiKeyName).getNotification_key();
+            return getNotificationKey(notiKeyName).getNotificationKey();
 
         } catch (Exception e) {
             log.error("Failed to send notification request", e);
